# osc

./: .gitignore  Cargo.toml  shell.nix
.github/workflows/: rust.yml
osc-block-storage/: Cargo.toml
osc-block-storage/src/: lib.rs
osc-fat/: Cargo.toml
osc-fat-example/: Cargo.toml
osc-fat-example/src/: main.rs
osc-fat-fuse/: Cargo.toml
osc-fat-fuse/src/: main.rs
osc-fat/src/: cluster_walker.rs  lib.rs  math.rs  prim.rs  read_buffer.rs  support.rs  util.rs
osc-fat/src/support/: cluster_walker.rs  read_buffer.rs
play-fat/: Cargo.toml
play-fat/src/: lib.rs  main.rs
play-fuse/: Cargo.toml
play-fuse/src/: main.rs
