[package]
name = "play-fuse"
version = "0.1.0"
authors = ["philipstears <philip@philipstears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
libc = "0.2.71"
env_logger = "0.7.1"

[dependencies.fuse]
git = "https://github.com/zargony/fuse-rs"
branch = "master"

